--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ body {background-color: black;}
 h1 {color: white;}
 h2 {color: darkred;}
 p {color: rgb(245, 35, 140);}
+legend {color: white;}
 </style>
 
 <body>
@@ -41,7 +42,7 @@ p {color: rgb(245, 35, 140);}
             </label>
         </p>
         </fieldset>
-        
+
         <button class="button-success pure-button button-xlarge">
             <i class="fa fa-paper-plane"></i>&nbsp;Send</button>
     </form>
