wording and format

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@ legend {color: white;}
 
     <form class="gform" method="post" data-email="example@gmail.com" action="https://script.google.com/macros/s/AKfycbwq704ZMTlV2ZTCNvj5GctsGZ9XvR5B4w51QZNU5TPrLzYE3WfFK1OFjLWN8LHd37VZ-A/exec">
         <fieldset>
-            <legend>Tell me a secret</legend>
+            <legend>Tell me something</legend>
           <p>
-            <label>Name: <input name="name"></label>
+            <label>Name: <br><input name="name"></label>
           </p>
           <p>
             <label>Secret:
