--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ legend {color: white;}
             <label>Name: <br><input name="name"></label>
           </p>
           <p>
-            <label>Secret:
+            <label>Something:
                 <br />
                 <textarea name="secret" cols="30"
                     rows="3"></textarea>
